Sets views folder route and prepares Resources folder

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -3,3 +3,8 @@ twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
     exception_controller: null
+
+    # Bundle View Paths
+    paths:
+        # Resources/Views
+        '%kernel.project_dir%/src/Resources/views': views
