--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,6 +28,7 @@ security:
                 lifetime: 604800 # 1 week in seconds
             logout:
                 path: app_logout
+                target: blog
                 # where to redirect after logout
                 # target: app_any_route
 
@@ -40,5 +41,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/gestionar, roles: ROLE_USER }
+        - { path: ^/gestionar/.*, roles: ROLE_USER }
+        - { path: ^/perfil, roles: ROLE_USER }
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/registro, roles: IS_AUTHENTICATED_ANONYMOUSLY }
