--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,6 +6,7 @@ security:
             algorithm: bcrypt
 
     role_hierarchy:
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_USER]
         ROLE_ADMIN: [ROLE_USER]
 
     providers:
