--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^19.0.2",
         "bootstrap": "^4.5.0",
-        "bootstrap-icons": "^1.0.0-alpha4",
         "ckeditor5": "^19.1.1",
+        "font-awesome": "^4.7.0",
         "jquery-slugify": "^1.2.5",
         "speakingurl": "^14.0.1"
     }
