Preparing readme.md file

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -8,4 +8,4 @@ twig:
         - 'bootstrap_4_layout.html.twig'
         - '@PrestaImage/form/bootstrap_4.html.twig'
 
-    # exception_controller: App\Controller\ExceptionController::showException
+    exception_controller: App\Controller\ExceptionController::showException
