--- a/.env
+++ b/.env
@@ -30,5 +30,5 @@ APP_SECRET=73869e05ef28949be1375ba2bbf09ede
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 # DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
-DATABASE_URL=mysql://root:root@127.0.0.1:3306/dev_jespinoza_blogforg
+DATABASE_URL=mysql://root:root@127.0.0.1:3306/dev_jespinoza_blogforg?serverVersion=5.6.38
 ###< doctrine/doctrine-bundle ###
